[package]
name = "hippo-openapi"
description = "OpenAPI client for Hippo"
license = "Apache-2.0"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
